--- a/wtk.html
+++ b/wtk.html
@@ -51,63 +51,63 @@
     </div>
   </nav> 
         <!-- img carousel -->
-         
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="10000">
-                <img src="img carousel/cop.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1>HELI TOURISM</h1>
-                    <p class="heli">Elevate your travel Experience to new heights</p>
-                  </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="img carousel/escape-to-the-hills-1920x650_(2).jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <!-- <h5>second slide label</h5> -->
-                    <p class="summer">Beat the summer heat <strong>escape to the hills</strong>.</p>
-                  </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="img carousel/ecape(1).jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>LANDS OF MAJISTEIC TREATS</h5>
-                    <p>Trivandrum and Kollam</p>
-                  </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="img carousel/caravan-000000000.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>KERAVAN KERALA</h5>
-                    <p>Experience the magic of kerala in your own comfort .</p>
-                  </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="img carousel/ashtamudi_lake000000.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>ASTAMUDI LAKE</h5>
-                    <p>Canoe through the heart of nature.</p>
-                  </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="img carousel/destination-wedding-banner-1920.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>DESTINATION WEDDING</h5>
-                    <p>Exchange your vows admist nature.</p>
-                  </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+         <!-- Carousel -->
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+          <img src="img carousel/cop.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+              <h1>HELI TOURISM</h1>
+              <p class="heli">Elevate your travel Experience to new heights</p>
           </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+          <img src="img carousel/escape-to-the-hills-1920x650_(2).jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+              <p class="summer">Beat the summer heat <strong>escape to the hills</strong>.</p>
+          </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+          <img src="img carousel/ecape(1).jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>LANDS OF MAJESTIC TREATS</h5>
+              <p>Trivandrum and Kollam</p>
+          </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+          <img src="img carousel/caravan-000000000.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>KERAVAN KERALA</h5>
+              <p>Experience the magic of Kerala in your own comfort.</p>
+          </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+          <img src="img carousel/ashtamudi_lake000000.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>ASTAMUDI LAKE</h5>
+              <p>Canoe through the heart of nature.</p>
+          </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+          <img src="img carousel/destination-wedding-banner-1920.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>DESTINATION WEDDING</h5>
+              <p>Exchange your vows amidst nature.</p>
+          </div>
+      </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
         <!-- link -->
-        <div class="flex-container">
+        <div >
           <div class="district ">
             <a href="tvm.html" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">TRIVANDRUM</a>
             <a href="kollam.html" class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">KOLLAM</a>
@@ -242,7 +242,7 @@
         </a>
         </div>
         <div class="destination">
-          <a href=""><img src="top destination/kudi.jpeg" class="img-fluid topdest" alt="">
+          <a href="thekkekudi.html"><img src="top destination/kudi.jpeg" class="img-fluid topdest" alt="">
           <div class="text">
             <div class="box7">
             Thekkekudi Cave Temple 
@@ -251,7 +251,7 @@
         </a>
         </div>
         <div class="destination">
-          <a href=""><img src="top destination/bhavan.jpeg" class="img-fluid topdest" alt="">
+          <a href="bhavan.html"><img src="top destination/bhavan.jpeg" class="img-fluid topdest" alt="">
           <div class="text">
             <div class="box8">
             Vyloppilli Samskrithi Bhavan
@@ -265,74 +265,55 @@
   </div>
 </div>
   <!-- things to do image link -->
-  <div class="thingstodohead">
-    <h3>THINGS TO DO</h3>
-  </div>
-  <div>
-   <div class="bg-things">
-  <div class="things-to-do">
-    <a href=""><img src="thinga to do in kerala/forest.jpeg" class="img-fluid things">
-    <div class="text">
-      <div class="sqr1">
-       A-Journey-through-the-Forest
+  
+  <div class="things-todo-container">
+    <div class="thingstodohead">
+      <h3>THINGS TO DO</h3>
     </div>
-  </div>
-  </a>
-  </div>
-  <div class="things-to-do">
-    <a href=""><img src="thinga to do in kerala/ayur.jpeg" class="img-fluid things">
-    <div class="text">
-      <div class="sqr2">
-      Ayurveda
-    </div>
-  </div>
-  </a>
-  </div>
-  <div class="things-to-do">
-    <a href=""><img src="thinga to do in kerala/hik.jpeg" class="img-fluid things">
-    <div class="text">
-      <div class="sqr3">
-     Hiking
-    </div>
-  </div>
-  </a>
-  </div>
-  <div class="things-to-do">
-    <a href=""><img src="thinga to do in kerala/Paragliding.jpg" class="img-fluid things">
-    <div class="text">
-      <div class="sqr4">
-            Paragliding 
-    </div>
-  </div>
-  </a>
-  </div>
-  <div class="things-to-do">
-    <a href=""><img src="thinga to do in kerala/resposible tourism things todo.jpg" class="img-fluid things">
-    <div class="text">
-      <div class="sqr5">
-            Responsible Tourism
-    </div>
-  </div>
-    <div class="things-to-do">
-      <a href=""><img src="thinga to do in kerala/scuba-diving1.jpg" class="img-fluid things">
-      <div class="text">
-        <div class="sqr6">
-              Scuba Diving 
-        </div>
+    
+    <div class="cards-containerthing">
+      <div class="cardthing">
+       <a href="ecotourism.html"> <img src="thinga to do in kerala/forest.jpeg" alt="Forest" class="img-fluid"></a>
+        <div class="card-text">A Journey through the Forest</div>
       </div>
-    </a>
+  
+      <div class="cardthing">
+        <a href="ayurvedha.html"><img src="thinga to do in kerala/ayur.jpeg" alt="Ayurveda" class="img-fluid"></a>
+        <div class="card-text">Ayurveda</div>
+      </div>
+  
+      <div class="cardthing">
+        <a href="hiking.html"> <img src="thinga to do in kerala/hik.jpeg" alt="Hiking" class="img-fluid"></a>
+        <div class="card-text">Hiking</div>
+      </div>
+  
+      <div class="cardthing">
+        <a href=""> <img src="thinga to do in kerala/Paragliding.jpg" alt="Paragliding" class="img-fluid"></a>
+        <div class="card-text">Paragliding</div>
+      </div>
+  
+      <div class="cardthing">
+        <a href=""> <img src="thinga to do in kerala/resposible tourism things todo.jpg" alt="Responsible Tourism" class="img-fluid"></a>
+        <div class="card-text">Responsible Tourism</div>
+      </div>
+  
+      <div class="cardthing">
+        <a href=""> <img src="thinga to do in kerala/scuba-diving1.jpg" alt="Scuba Diving" class="img-fluid"></a>
+        <div class="card-text">Scuba Diving</div>
+      </div>
     </div>
   </div>
   <div class="btn-Explore">
     <button type="button" class="btn btn-primary">EXPLORE THE THINGS</button>
-</div>
+  </div>
+  
 <!-- festivals -->
-<div class="thingstodohead">
+<div class="experiencekerala">
   <h3>FESTIVALS</h3>
 </div>
 <div>
- <div class="CHUMMA">
-<div class="things-to-do">
+ <div class="fest">
+<div class="">
   <a href=""><img src="festivels/vallom.jpeg" class="img-fluid things">
   <div class="text">
     <div class="sqr1">
@@ -410,56 +391,47 @@
 </div>
 
  <!-- footer -->
- <footer class="footer-1">
-  <div class="container-1">
-    <div class="row-1">
-      <div class="footer-col-1">
-        <h4>Product offering</h4>
-        <ul>
-          <li><a href="#">Flights</a></li>
-          <li><a href="#">International flights</a></li>
-          <li><a href="#">Cab booking</a></li>
-          <li><a href="#">Hotels</a></li>
-          <li><a href="#">Bus booking</a></li>
-          <li><a href="#">Rail ticket booking</a></li>
-          <li><a href="#">Cheap flights</a></li>
-        </ul>
-      </div>
-      <div class="footer-col-1">
-        <h4>Travel Hub</h4>
-        <ul>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Travel Guid</a></li>
-          <li><a href="#">Flight offers </a></li>
-          <li><a href="#">where to stay</a></li>
-          <li><a href="#">Travel tips</a></li>
-          <li><a href="#">Social responsibility</a></li>
-          <li><a href="#">Complaints</a></li>
-          </ul>
-      </div>
-      <div class="footer-col-1">
-        <h4>Nature</h4>
-        <ul>
-          <li><a href="#">Munnar</a></li>
-          <li><a href="#">wayanad</a></li>
-          <li><a href="#">Kovalam</a></li>
-          <li><a href="#">Periyar</a></li>
-          <li><a href="#"> varkala</a></li>
-          <li><a href="#">And more</a></li>
-          <li><a href="#">All Kerala Tour Packages</a></li>
-          </ul>
-      </div>
-      <div class="footer-col-1">
-        <h4>Follow Us</h4>
-        <ul>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">Linkedin</a></li>  
-        </ul>
+ <footer class="footer-container">
+  <div class="footer-content">
+    <div class="footer-section about">
+      <h3>Kerala Tourism</h3>
+      <p>God's Own Country, Kerala is a tropical paradise with serene beaches, lush hill stations, backwaters, rich culture, and traditional Ayurveda. Explore the beauty of Kerala!</p>
+    </div>
+
+    <div class="footer-section links">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="responsible.html">Experience Kerala</a></li>
+        <li><a href="">where to go</a></li>
+        <li><a href="wheretostay.html">Where to Stay</a></li>
+        <li><a href="ecotourism.html">Things to do</a></li>
+        <li><a href="keralafood.html">Kerala Special Food</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section contact">
+      <h4>Contact Us</h4>
+      <p><i class="fas fa-map-marker-alt"></i> Kerala Tourism Office, Thiruvananthapuram</p>
+      <p><i class="fas fa-phone"></i> +91 123-456-7890</p>
+      <p><i class="fas fa-envelope"></i> info@keralatourism.com</p>
+    </div>
+
+    <div class="footer-section social">
+      <h4>Follow Us</h4>
+      <div class="social-links">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
       </div>
     </div>
   </div>
-  </footer>
+
+  <div class="footer-bottom">
+    <p>&copy; 2024 Kerala Tourism. All Rights Reserved.</p>
+  </div>
+</footer>
+
+
          </body>
          </html>
