--- a/index.html
+++ b/index.html
@@ -8,74 +8,68 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <style>
-         .navbar .navbar-expand-lg .navbar .fixed-top .bg-body-tertiary{
-            top: 20px;
+        .navbar {
+            background-color: rgba(248, 249, 250, 0.5);
         }
-        .bg-body-tertiary {
-        --bs-bg-opacity: 1;
-        background-color: rgb(248 249 250 / 0%) !important;
-            }
-       .navbar-brand{
-        color: #af2332 !important;
-        text-shadow:0 0 2px black;
-       }
-.form{
-    position: absolute;
-    max-width: 340px;
-    width: 60%;
-    top: 432px;
-    left: 630px;
-    transform:translate(-50%, 
-    -50%);
-    z-index: 101;
-    background: #0000005c;
-    padding: 25px;
-    border-radius: 12px;
-    box-shadow: rgba(0, 0, 0, 0.1);
-}
-p{
-    color: black;
-}
-
-body{
-    background-image: url(logg.jpg);
-    background-repeat: no-repeat;
-    background-size:cover;
-}
-a{
-    text-decoration: none;
-    color: white;
-}
+        .navbar-brand {
+            color: #af2332 !important;
+            text-shadow: 0 0 2px black;
+        }
+        .form-container {
+            max-width: 340px;
+            margin: auto;
+            padding: 25px;
+            border-radius: 12px;
+            background: rgba(0, 0, 0, 0.5);
+            box-shadow: rgba(0, 0, 0, 0.1) 0 0 10px;
+        }
+        body {
+            background-image: url(logg.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            height: 100vh; 
+            display: flex;
+            align-items: center; 
+            justify-content: center; 
+        }
+        a {
+            text-decoration: none;
+            color: white;
+        }
+        p {
+            color: black;
+            text-shadow: 0 0 10px white;
+        }
     </style>
 </head>
 <body>
-     <!-- nav -->
-     <nav class="navbar navbar-expand-lg navbar fixed-top bg-body-tertiary">
+    <!-- nav -->
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a href="index.html" class="navbar-brand">Wanderlust the KERALA</a>
+            <a href="index.html" class="navbar-brand">Wanderlust the KERALA</a>
         </div>
-      </nav>
+    </nav>
+    
     <!-- form -->
-            <form action="wtk.html" onsubmit="return validate()">
-                <div class="form">
-                <fieldset>
-                  <legend style="color: white;">Login</legend>
-                  <div class="mb-3">
-                    <label ></label>
-                    <input type="email" id="disabledTextInput" class="form-control" placeholder="enter email id required">
-                  </div>
-                  <div class="mb-3">
-                    <label ></label>
-                    <input type="password" id="disabledTextInput" class="form-control" placeholder="enter your password required">
-                  </div>
-                  <p style="color: rgb(0, 0, 0); text-shadow:0 0 10px white;">Don't have an account?
-                    <a class="sign" href="signup.html">sign up</a> here
-                </p>
-                  <button type="submit" class="btn btn-primary">Login</button>
-                </fieldset>
-            </div>
-              </form>
-            <script src="validation1.js"></script>
-        <!-- form -->
+    <div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+        <form action="wtk.html" onsubmit="return validate()" class="form-container">
+            <fieldset>
+                <legend style="color: white;">Login</legend>
+                <div class="mb-3">
+                    <label for="email" class="form-label" style="color: white;">Email</label>
+                    <input type="email" id="email" class="form-control" placeholder="Enter email id required" required>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label" style="color: white;">Password</label>
+                    <input type="password" id="password" class="form-control" placeholder="Enter your password required" required>
+                </div>
+                <p>Don't have an account? <a class="sign" href="signup.html">Sign up</a> here</p>
+                <button type="submit" class="btn btn-primary w-100">Login</button>
+            </fieldset>
+        </form>
+    </div>
+
+    <script src="validation1.js"></script>
+    <!-- form -->
 </body>
 </html>
