--- a/findmoreexp.html
+++ b/findmoreexp.html
@@ -44,7 +44,7 @@
     <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar fixed-top bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand text-danger-emphasis" href="wtk.html">Wanderlust the KERALA</a>
+      <a class="navbar-brand text-danger-emphasis" href="wtk.html">WanderKERALA</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
