--- a/kunnimangalam.html
+++ b/kunnimangalam.html
@@ -43,7 +43,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar fixed-top bg-body-tertiary">
             <div class="container-fluid">
-              <a href="wtk.html"class="navbar-brand">Wanderlust the KERALA</a>
+              <a href="wtk.html"class="navbar-brand">WanderKERALA</a>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
