--- a/wheretostay.html
+++ b/wheretostay.html
@@ -20,7 +20,7 @@
         color: #af2332 !important;
         text-shadow:0 0 2px black;
     }
-    .imghome{
+    /* .imghome{
       width: 1535px;
     height: 410px;
     }
@@ -50,13 +50,13 @@
        p {
     margin-top: 0;
     margin-bottom: 0rem;
-}
+} */
 </style>
 <body> 
   <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand text-danger-emphasis" href="wtk.html">Wanderlust the KERALA</a>
+          <a class="navbar-brand text-danger-emphasis" href="wtk.html">WanderKERALA</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -96,84 +96,118 @@
       <h4>WHERE TO STAY </h4>
       <!-- cards -->
        <!-- 1 -->
-       <div class="container">
-      <div class="card" style="width: 12rem;">
-        <a href="https://maps.app.goo.gl/GJYz1YT95TnLz7kVA"><img src="whereto/1 kariyil kayaloram.jpg" class="card-img-top" alt="..."></a>
-        <div class="card-body">
-          <p class="card-text"><small><strong>Kaylorm Homestay</strong>
-          </p>
-          <p> 
-            Nikarthil Kuravaru Kadavu Road,Vayalar Cherthala Alappuzha.................. phn: 9447766856
-          </p>
-          </small>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <a href="https://maps.app.goo.gl/GJYz1YT95TnLz7kVA"><img src="whereto/1 kariyil kayaloram.jpg"class="img-fluid rounded-start" alt="..."></a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Kaylorm Homestay</h5>
+              <p class="card-text">  Nikarthil Kuravaru Kadavu Road,Vayalar Cherthala Alappuzha phn: 9447766856</p>
+            </div>
+          </div>
         </div>
       </div>
       <!-- 2-->
-      <div class="card" style="width: 12rem;">
-        <a href="https://maps.app.goo.gl/xSGjdpt9HE3cxEBFA"><img src="whereto/2nd sp grand days.jpg" class="card-img-top" alt="..."></a>
-        <div class="card-body">
-          <p class="card-text"><small><strong>SP Grand Days</strong>
-            Panvavila Junction Near Flyover Thycaud, Trivandrum phn:9745403344</p>
-          </small>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <a href="https://maps.app.goo.gl/xSGjdpt9HE3cxEBFA"><img src="whereto/2nd sp grand days.jpg"class="img-fluid rounded-start" alt="..."></a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">SP Grand Days</h5>
+              <p class="card-text">Panvavila Junction Near Flyover Thycaud, Trivandrum phn:9745403344</p>
+            </div>
+          </div>
         </div>
       </div>
       <!-- 3 -->
-      <div class="card" style="width: 12rem;">
-        <a href="https://maps.app.goo.gl/ioiukUVuEfNyEC1x9"><img src="whereto/3 the cliff resort munnar.jpeg" class="card-img-top" alt="..."></a>
-        <div class="card-body">
-          <p class="card-text"><small><strong>CliffResortmunnr </strong>
-            Near Pothamedu View Point Pothamedu Munnar, Idukki phn:9446899590</p>
-          </small>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <a href="https://maps.app.goo.gl/ioiukUVuEfNyEC1x9"><img src="whereto/3 the cliff resort munnar.jpeg"class="img-fluid rounded-start" alt="..."></a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">CliffResortmunnr</h5>
+              <p class="card-text">Near Pothamedu View Point Pothamedu Munnar, Idukki phn:9446899590</p>
+            </div>
+          </div>
         </div>
       </div>
       <!-- 4 -->
-      <div class="card" style="width: 12rem;">
-        <a href="https://maps.app.goo.gl/h6DdoeJRSZ6X4b7b9"><img src="whereto/5 thekkumpuram residency.jpg" class="card-img-top" alt="..."></a>
-        <div class="card-body">
-          <p class="card-text"><small><strong>THEKKUMPURAM RESIDENCY</strong>
-           kuminiparmb,calicut airport,kondotty Malappuram phn:8129564600</p>
-          </small>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <a href="https://maps.app.goo.gl/h6DdoeJRSZ6X4b7b9"><img src="whereto/5 thekkumpuram residency.jpg"class="img-fluid rounded-start" alt="..."></a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">THEKKUMPURAM RESIDENCY</h5>
+              <p class="card-text">kuminiparmb,calicut airport,kondotty Malappuram phn:8129564600</p>
+            </div>
+          </div>
         </div>
       </div>
       <!-- 5 -->
-      <div class="card" style="width: 12rem;">
-        <a href="https://maps.app.goo.gl/PSG2Et7eKDHRLZhd8"><img src="whereto/4 3 seas tours and travels.jpeg" class="card-img-top" alt="..."></a>
-        <div class="card-body">
-          <p class="card-text"><small><strong>SP Grand Days</strong>
-            Panvavila Junction Near Flyover Thycaud, Trivandrum phn:9745403344</p>
-          </small>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <a href="https://maps.app.goo.gl/sdV5UEVkEgz7EdqY9"><img src="whereto/ottway.jpeg"class="img-fluid rounded-start" alt="..."></a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">THE OTTWAY HILLS RESTAURANT</h5>
+              <p class="card-text">Maduppety, idukki, phn:944330800</p>
+            </div>
+          </div>
         </div>
       </div>
       <!-- 6-->
-      <div class="card" style="width: 12rem;">
-        <a href="https://maps.app.goo.gl/2zVnw4q8LTymCQte8"><img src="whereto/6 7's castle homestay, koompanpara, munnar.jpg" class="card-img-top" alt="..."></a>
-        <div class="card-body">
-          <p class="card-text"><small><strong>SP Grand Days</strong>
-            Panvavila Junction Near Flyover Thycaud, Trivandrum phn:9745403344</p>
-          </small>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <a href="https://maps.app.goo.gl/3jmXzLHxNz4Vx7ad7"><img src="whereto/marari.jpg"class="img-fluid rounded-start" alt="..."></a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">MARARI LA CASA FELIZ</h5>
+              <p class="card-text">Omanappuzha, Alapuzha phn:9072173734</p>
+            </div>
+          </div>
         </div>
       </div>
       <!-- 7 -->
-      <div class="card" style="width: 12rem;">
-        <a href="https://maps.app.goo.gl/bvbqjPYKsZSDmxT38"><img src="whereto/7 898.jpeg" class="card-img-top" alt="..."></a>
-        <div class="card-body">
-          <p class="card-text"><small><strong>SP Grand Days</strong>
-            Panvavila Junction Near Flyover Thycaud, Trivandrum phn:9745403344</p>
-          </small>
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <a href="https://maps.app.goo.gl/UW46JN2BYwBZZSv89"><img src="whereto/eaden.jpg"class="img-fluid rounded-start" alt="..."></a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">EADEN HOMESTAY</h5>
+              <p class="card-text">KATHIPARA, Idukki phn:8606308909</p>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
     <!-- 2nd container -->
  <!-- 1 -->
- <div class="container">
-  <div class="card" style="width: 10rem;">
-    <a href="https://maps.app.goo.gl/rcHwwGMek5nXmV6R6"><img src="whereto/8 A.J. park.jpg" class="card-img-top" alt="..."></a>
-    <div class="card-body">
-      <p class="card-text"><small><strong>SP Grand Days</strong>
-        Panvavila Junction Near Flyover Thycaud, Trivandrum phn:9745403344</p>
-      </small>
+ <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      <a href="https://maps.app.goo.gl/vQAoamoT5WwbcZDz5"><img src="whereto/susrutha.jpg"class="img-fluid rounded-start" alt="..."></a>
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Susrutha Institute of Ayurvedic Sciences (Research) & Panchakarma Hospital</h5>
+        <p class="card-text">Kattakkada, Thiruvananthapuram contact:susruthaayurveda@gmail.com</p>
+      </div>
     </div>
   </div>
+</div>
   <!-- 2-->
   <div class="card" style="width: 10rem;">
     <a href="https://maps.app.goo.gl/SzkbLT6Fm9vmc7id8"><img src="whereto/9 Aadens homestay.jpg" class="card-img-top" alt="..."></a>
