--- a/ecotourism.html
+++ b/ecotourism.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a href="geturguide.html" class="navbar-brand">GET YOUR GUIDE</a>
+          <a href="wtk.html" class="navbar-brand">WanderKERALA</a>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
