--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- nav -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">Wanderlust the KERALA</a>
+            <a href="index.html" class="navbar-brand">WanderKERALA</a>
         </div>
     </nav>
     
