--- a/wtk.html
+++ b/wtk.html
@@ -11,7 +11,7 @@
 </head> 
 <body>
   
-  <!-- <nav>  -->
+  <nav> 
   <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-transparent">
     <div class="container-fluid">
       <a class="navbar-brand text-danger-emphasis" href="wtk.html">WanderKerala</a>
@@ -133,53 +133,38 @@
              <PRE>When in Kerala, Don't Miss These Unique Travel Experiences!</PRE>
           </div>
          <!-- firstcard with link -->
-        
-          <div class="flex-container">
-          <div class="card-col">
-         <div class="card" style="width: 18rem;">
-          <img src="experience kerala/1.png "class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">ECOTOURISM</h5>
-            <a href="ecotourism.html" class="btn btn-primary">Explore</a>
+         <div class="card-container grp">
+          <div class="card grp">
+              <img src="experience kerala/1.png" alt="Image 1">
+              <h3 class="cardname">ECOTOURISM</h3>
+              <a href="ecotourism.html" class="btn btn-primary">Explore</a>
           </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="experience kerala/3.png" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">JUDAISAM IN KERALA</h5>
-            <a href="judaism.html" class="btn btn-primary">Explore</a>
+          <div class="card grp">
+              <img src="experience kerala/3.png" alt="Image 2">
+              <h3 class="cardname">JUDAISAM IN KERALA</h3>
+              <a href="judaism.html" class="btn btn-primary">Explore</a>
           </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="experience kerala/2.png" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">KAPPA AND FISH CURRY</h5>
-            <a href="keralafood.html" class="btn btn-primary">Explore</a>
+          <div class="card grp">
+              <img src="experience kerala/2.png" alt="Image 3">
+              <h3 class="cardname">KAPPA & FISHCURRY</h3>
+              <a href="keralafood.html" class="btn btn-primary">Explore</a>
           </div>
-        </div>
-        <div class="card flex-container" style="width: 18rem;">
-          <img src="experience kerala/rt.jpg" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">RESPONSIBLE TOURISM MISSION</h5>
-            <a href="responsible.html" class="btn btn-primary">Explore</a>
+          <div class="card grp">
+              <img src="experience kerala/rt.jpg" alt="Image 4">
+              <h3 class="cardname">R T MISSION</h3>
+              <a href="responsible.html" class="btn btn-primary">Explore</a>
           </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="experience kerala/theyy.jpg" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">THEYYAM</h5>
-            <a href="theyyam.html" class="btn btn-primary">Explore</a>
+          <div class="card grp">
+              <img src="experience kerala/theyy.jpg" alt="Image 5">
+              <h3 class="cardname">THEYYAM</h3>
+              <a href="theyyam.html" class="btn btn-primary">Explore</a>
           </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-          <img src="experience kerala/3yog.jpg" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">YOGA</h5>
-            <a href="yoga.html" class="btn btn-primary">Explore</a>
+          <div class="card grp">
+              <img src="experience kerala/3yog.jpg" alt="Image 6">
+              <h3 class="cardname">YOGA</h3>
+              <a href="yoga.html" class="btn btn-primary">Explore</a>
           </div>
-        </div>
       </div>
-    </div>
       <div class="btn-experience">
        <a href="findmoreexp.html" style="text-decoration: none;"> <button type="button" class="btn btn-primary" >FIND MORE EXPERIENCE</button></a>
     </div>
@@ -308,78 +293,15 @@
 </div>
 <div>
  <div class="fest">
-<div class="">
-  <a href=""><img src="festivels/vallom.jpeg" class="img-fluid things">
-  <div class="text">
-    <div class="sqr1">
-  </div>
-</div>
-</a>
-</div>
-<div class="things-to-do">
-  <a href=""><img src="festivels/vallom 2.jpeg" class="img-fluid things">
-  <div class="text">
-    <div class="sqr2">
-  </div>
-</div>
-</a>
-</div>
-<div class="things-to-do">
-  <a href=""><img src="festivels/perinnal.jpeg" class="img-fluid things">
-  <div class="text">
-    <div class="sqr3">
-  </div>
-</div>
-</a>
-</div>
-<div class="things-to-do">
-  <a href=""><img src="festivels/cha.jpg " class="img-fluid things">
-  <div class="text">
-    <div class="sqr3">
-  </div>
-</div>
-</a>
-</div>
-<div class="things-to-do">
-  <a href=""><img src="festivels/kadhak.jpg" class="img-fluid things">
-  <div class="text">
-    <div class="sqr4">
-  </div>
-</div>
-</a>
-</div>
-<div class="things-to-do">
-  <a href=""><img src="festivels/puppet.jpg" class="img-fluid things">
-  <div class="text">
-    <div class="sqr4">
-  </div>
-</div>
-</a>
-</div>
-<div class="things-to-do">
-  <a href=""><img src="festivels/thy.jpg" class="img-fluid things">
-  <div class="text">
-    <div class="sqr4">
-  </div>
-</div>
-</a>
-</div>
-<div class="things-to-do">
-  <a href=""><img src="festivels/kalari.jpg" class="img-fluid things">
-  <div class="text">
-    <div class="sqr4">
-  </div>
-</div>
-</a>
-</div>
-  <div class="things-to-do">
-    <a href=""><img src="festivels/chenda.jpg" class="img-fluid things">
-    <div class="text">
-      <div class="sqr6">
-      </div>
-    </div>
-  </a>
-  </div>
+  <a href=""><img src="festivels/vallom.jpeg" class="img-fluid things"></a>
+  <a href=""><img src="festivels/vallom 2.jpeg" class="img-fluid things"></a>
+  <a href=""><img src="festivels/perinnal.jpeg" class="img-fluid things"></a>
+  <a href=""><img src="festivels/cha.jpg " class="img-fluid things"></a>
+  <a href=""><img src="festivels/kadhak.jpg" class="img-fluid things"></a>
+  <a href=""><img src="festivels/puppet.jpg" class="img-fluid things"></a>
+  <a href=""><img src="festivels/thy.jpg" class="img-fluid things"></a>
+  <a href=""><img src="festivels/kalari.jpg" class="img-fluid things"></a>
+    <a href=""><img src="festivels/chenda.jpg" class="img-fluid things"></a>
 </div>
 <div class="btn-Explore">
   <button type="button" class="btn btn-primary">MORE FESTIVELS & EVENTS</button>
