--- a/wtk.html
+++ b/wtk.html
@@ -133,41 +133,59 @@
              <PRE>When in Kerala, Don't Miss These Unique Travel Experiences!</PRE>
           </div>
          <!-- firstcard with link -->
-         <div class="card-container grp">
-          <div class="card grp">
-              <img src="experience kerala/1.png" alt="Image 1">
-              <h3 class="cardname">ECOTOURISM</h3>
-              <a href="ecotourism.html" class="btn btn-primary">Explore</a>
+         <div class="cards-container">
+          <div class="card">
+              <img src="experience kerala/1.png" alt="Card Image 1" class="card-image">
+              <div class="card-content">
+                  <h3 style="font-size: 20px;"><strong>ECO      TOURISM</strong></h3>
+                  <a href="ecotourism.html" class="card-btn">Explore</a>
+              </div>
           </div>
-          <div class="card grp">
-              <img src="experience kerala/3.png" alt="Image 2">
-              <h3 class="cardname">JUDAISAM IN KERALA</h3>
-              <a href="judaism.html" class="btn btn-primary">Explore</a>
+
+          <div class="card">
+              <img src="experience kerala/3.png" alt="Card Image 2" class="card-image">
+              <div class="card-content">
+                  <h3 style="font-size: 21px;"><strong>JUDAISAM IN KERALA</strong></h3>
+                  <a href="judaism.html" class="card-btn">Explore</a>
+              </div>
           </div>
-          <div class="card grp">
-              <img src="experience kerala/2.png" alt="Image 3">
-              <h3 class="cardname">KAPPA & FISHCURRY</h3>
-              <a href="keralafood.html" class="btn btn-primary">Explore</a>
+
+          <div class="card">
+              <img src="experience kerala/2.png" alt="Card Image 3" class="card-image">
+              <div class="card-content">
+                  <h3 style="font-size: 20px;"><strong>KAPPA & FISHCURRY</strong></h3>
+                  <a href="keralafood.html" class="card-btn">Explore</a>
+              </div>
           </div>
-          <div class="card grp">
-              <img src="experience kerala/rt.jpg" alt="Image 4">
-              <h3 class="cardname">R T MISSION</h3>
-              <a href="responsible.html" class="btn btn-primary">Explore</a>
+
+          <div class="card">
+            <img src="experience kerala/rt.jpg" alt="Card Image 3" class="card-image">
+            <div class="card-content">
+                <h3 style="font-size: 21px;"><strong>RT MISSION</strong></h3>
+                <a href="responsible.html" class="card-btn">Explore</a>
+            </div>
+        </div>
+
+        <div class="card">
+          <img src="experience kerala/theyy.jpg" alt="Card Image 3" class="card-image">
+          <div class="card-content">
+              <h3 style="font-size: 20px;"><strong>     THEYYAM</strong></h3>
+              <a href="theyyam.html" class="card-btn">Explore</a>
           </div>
-          <div class="card grp">
-              <img src="experience kerala/theyy.jpg" alt="Image 5">
-              <h3 class="cardname">THEYYAM</h3>
-              <a href="theyyam.html" class="btn btn-primary">Explore</a>
-          </div>
-          <div class="card grp">
-              <img src="experience kerala/3yog.jpg" alt="Image 6">
-              <h3 class="cardname">YOGA</h3>
-              <a href="yoga.html" class="btn btn-primary">Explore</a>
+      </div>
+
+          <div class="card">
+              <img src="experience kerala/3yog.jpg" alt="Card Image 4" class="card-image">
+              <div class="card-content">
+                  <h3 style="font-size: 20px;"><strong>YOGA</strong></h3>
+                  <a href="yoga.html" class="card-btn">Explore</a>
+              </div>
           </div>
       </div>
       <div class="btn-experience">
-       <a href="findmoreexp.html" style="text-decoration: none;"> <button type="button" class="btn btn-primary" >FIND MORE EXPERIENCE</button></a>
-    </div>
+        <a href="findmoreexp.html" style="text-decoration: none;"> <button type="button" class="btn btn-primary" >FIND MORE EXPERIENCE</button></a>
+     </div>
+
     <!-- top destination img link -->
 <div class="experiencekerala">
   <h3>TOP DESTINATIONS</h3>
