--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
     
     <!-- form -->
     <div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
-        <form action="wtk.html" onsubmit="return validate()" class="form-container">
+        <form action="wtk.html" onsubmit="return validation()" class="form-container">
             <fieldset>
                 <legend style="color: white;">Login</legend>
                 <div class="mb-3">
                     <label for="email" class="form-label" style="color: white;">Email</label>
-                    <input type="email" id="email" class="form-control" placeholder="Enter email id required" required>
+                    <input type="email" id="hello" class="form-control" placeholder="Enter email id required" required>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label" style="color: white;">Password</label>
-                    <input type="password" id="password" class="form-control" placeholder="Enter your password required" required>
+                    <input type="password" id="hi" class="form-control" placeholder="Enter your password required" required>
                 </div>
                 <p>Don't have an account? <a class="sign" href="signup.html">Sign up</a> here</p>
                 <button type="submit" class="btn btn-primary w-100">Login</button>
