--- a/wtk.html
+++ b/wtk.html
@@ -137,7 +137,7 @@
           <div class="card">
               <img src="experience kerala/1.png" alt="Card Image 1" class="card-image">
               <div class="card-content">
-                  <h3 style="font-size: 20px;"><strong>ECO      TOURISM</strong></h3>
+                  <h3 class="eco"><strong>ECO      TOURISM</strong></h3>
                   <a href="ecotourism.html" class="card-btn">Explore</a>
               </div>
           </div>
@@ -145,7 +145,7 @@
           <div class="card">
               <img src="experience kerala/3.png" alt="Card Image 2" class="card-image">
               <div class="card-content">
-                  <h3 style="font-size: 21px;"><strong>JUDAISAM IN KERALA</strong></h3>
+                  <h3 style="font-size: 21px; font-family: fantasy"><strong>JUDAISAM IN KERALA</strong></h3>
                   <a href="judaism.html" class="card-btn">Explore</a>
               </div>
           </div>
@@ -153,7 +153,7 @@
           <div class="card">
               <img src="experience kerala/2.png" alt="Card Image 3" class="card-image">
               <div class="card-content">
-                  <h3 style="font-size: 20px;"><strong>KAPPA & FISHCURRY</strong></h3>
+                  <h3 style="font-size: 15px; font-family: fantasy" ><strong>KAPPA & FISHCURRY</strong></h3>
                   <a href="keralafood.html" class="card-btn">Explore</a>
               </div>
           </div>
@@ -161,7 +161,7 @@
           <div class="card">
             <img src="experience kerala/rt.jpg" alt="Card Image 3" class="card-image">
             <div class="card-content">
-                <h3 style="font-size: 21px;"><strong>RT MISSION</strong></h3>
+                <h3 style="font-size: 17px; font-family: fantasy"><strong>RT MISSION</strong></h3>
                 <a href="responsible.html" class="card-btn">Explore</a>
             </div>
         </div>
@@ -169,7 +169,7 @@
         <div class="card">
           <img src="experience kerala/theyy.jpg" alt="Card Image 3" class="card-image">
           <div class="card-content">
-              <h3 style="font-size: 20px;"><strong>     THEYYAM</strong></h3>
+              <h3 style="font-size: 20px; font-family: fantasy"><strong>     THEYYAM</strong></h3>
               <a href="theyyam.html" class="card-btn">Explore</a>
           </div>
       </div>
@@ -177,7 +177,7 @@
           <div class="card">
               <img src="experience kerala/3yog.jpg" alt="Card Image 4" class="card-image">
               <div class="card-content">
-                  <h3 style="font-size: 20px;"><strong>YOGA</strong></h3>
+                  <h3 style="font-size: 20px; font-family: fantasy"><strong>YOGA</strong></h3>
                   <a href="yoga.html" class="card-btn">Explore</a>
               </div>
           </div>
